--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-در حال تست
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+  <meta charset="UTF-8">
+  <title>Telegram WebApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <style>
+    body { font-family: sans-serif; text-align: center; padding: 40px; background: #f2f2f2; }
+    .box {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      display: inline-block;
+      max-width: 400px;
+      margin-top: 50px;
+    }
+    button {
+      padding: 12px 25px;
+      background: #0088cc;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    #status {
+      margin-top: 20px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <div class="box">
+    <h2>وب‌اپ تلگرام</h2>
+    <p>برای ارسال داده به ربات، روی دکمه زیر کلیک کن:</p>
+    <button id="sendBtn">ارسال تست به ربات</button>
+    <div id="status"></div>
+  </div>
+
+  <script>
+    Telegram.WebApp.ready();
+
+    const btn = document.getElementById('sendBtn');
+    const status = document.getElementById('status');
+    const isValid = Telegram.WebApp.initData && Telegram.WebApp.initData.length > 0;
+
+    if (!isValid) {
+      status.innerText = "❌ لطفاً این صفحه را از طریق دکمه رسمی تلگرام باز کنید.";
+      btn.disabled = true;
+      btn.style.opacity = 0.5;
+    } else {
+      status.innerText = "✅ اتصال با تلگرام برقرار است.";
+    }
+
+    btn.addEventListener('click', () => {
+      Telegram.WebApp.sendData("سلام از WebApp 😎");
+      status.innerText = "⏳ در حال ارسال به ربات...";
+    });
+  </script>
+</body>
+</html>
