--- a/index.html
+++ b/index.html
@@ -2,63 +2,59 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>Telegram WebApp</title>
+  <title>وب اپ تلگرام</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 40px; background: #f2f2f2; }
+    body {
+      direction: rtl;
+      font-family: sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      padding: 50px;
+    }
     .box {
-      background: #fff;
+      background: white;
       padding: 30px;
-      border-radius: 12px;
+      border-radius: 16px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       display: inline-block;
-      max-width: 400px;
-      margin-top: 50px;
     }
     button {
-      padding: 12px 25px;
-      background: #0088cc;
-      border: none;
-      border-radius: 8px;
+      background-color: #0088cc;
       color: white;
-      font-size: 16px;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      border-radius: 10px;
       cursor: pointer;
-      margin-top: 20px;
     }
-    #status {
+    button:hover {
+      background-color: #0077b3;
+    }
+    .status {
       margin-top: 20px;
-      font-weight: bold;
+      font-size: 18px;
+      color: green;
     }
   </style>
 </head>
 <body>
+
   <div class="box">
     <h2>وب‌اپ تلگرام</h2>
     <p>برای ارسال داده به ربات، روی دکمه زیر کلیک کن:</p>
     <button id="sendBtn">ارسال تست به ربات</button>
-    <div id="status"></div>
+    <div class="status">✅ اتصال با تلگرام برقرار است.</div>
   </div>
 
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     Telegram.WebApp.ready();
 
-    const btn = document.getElementById('sendBtn');
-    const status = document.getElementById('status');
-    const isValid = Telegram.WebApp.initData && Telegram.WebApp.initData.length > 0;
-
-    if (!isValid) {
-      status.innerText = "❌ لطفاً این صفحه را از طریق دکمه رسمی تلگرام باز کنید.";
-      btn.disabled = true;
-      btn.style.opacity = 0.5;
-    } else {
-      status.innerText = "✅ اتصال با تلگرام برقرار است.";
-    }
-
-    btn.addEventListener('click', () => {
-      Telegram.WebApp.sendData("سلام از WebApp 😎");
-      status.innerText = "⏳ در حال ارسال به ربات...";
+    document.getElementById("sendBtn").addEventListener("click", function () {
+      Telegram.WebApp.sendData("سلام! این پیام از دکمه HTML ارسال شد ✅");
     });
   </script>
+
 </body>
 </html>
