--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         return;
       }
 
-      fetch("https://yourdomain.com/submit.php", {
+      fetch("https://takhmin.mtnsite.ir/tel-web-app/submit.php", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
